# undergrad-thesis

./: ArbitrarySystem.hs  DefaultSecurityDefinitions.hs  QuickSCS.cabal  README  README.md  SSDLLite.hs  SecurityBasics.hs  SecurityChecker.hs  SecuritySystem.hs  Singletons.hs  SystemDSL.txt  SystemEDSL.txt  TwoHTwoDOneLMLS.hs  TwoLevelMLS.hs  dfa.hs  intransitiveDef.hs  system.hs  taSecurity.hs  test.hs  test3.hs  test4.hs  testEDSL.hs  testSecurity.hs
ICS/: Checker.hs  SecurityChecker.hs  Utility.hs  test2.hs  test3.hs  test4.hs
ICS/Security/: Prelude.hs
ICS/System/: Arbitrary.hs  Basics.hs  Description.hs
QuickSCS/: Checker.hs  SecuritySystem.hs  TwoLevelMLS.hs  TypeNats.hs  Utility.hs  test.hs  testEDSL.hs  testSecurity.hs
QuickSCS/Security/: Prelude.hs
QuickSCS/System/: Arbitrary.hs  Basics.hs  Description.hs  GraphVizDrawer.hs
