Name:           QuickSCS
Version:        0.9
Cabal-version:  >=1.6
Build-type:     Simple

library
    exposed-modules:
        QuickSCS.TypeNats
        QuickSCS.Utility
        QuickSCS.System.Basics
        QuickSCS.System.Arbitrary
        QuickSCS.System.Description
        QuickSCS.System.GraphVizDrawer
        QuickSCS.Security.Prelude
        QuickSCS.Checker

    build-depends:
        base >= 4.5, containers, mtl, QuickCheck, ghc-prim
